--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid bg-pattern ">
 
     <div class="row">
-        <div class="px-4 py-5 my-5 text-center">
+        <div class="col-8 mx-auto p-5 my-5 text-center bg-blur">
             <div class="mb-3">
                 <i class="fa-solid fa-fire text-warning me-3 logo"></i>
             </div>
 
             <h1 class="display-5 fw-bold text-body-emphasis mb-3">Welcome to Lite<span class="text-warning">X</span>
             </h1>
-            <div class="col-lg-7 mx-auto">
+            <div class="mx-auto">
                 <p class="lead mb-4">
                     Discover a diverse range of shoes designed to complement your unique style, ensuring you make a
                     statement with every stride.
@@ -20,9 +20,6 @@
         </div>
     </div>
 </div>
-
-<app-home-blocks></app-home-blocks>
-
 
 <div class="container ">
     <div class="row p-3">
@@ -80,34 +77,6 @@
                 </div>
             </div>
 
-        </div>
-
-
-
-        <div class="row mx-auto mt-4">
-
-            <div class="col-12 col-md-6 px-4 py-5 text-start ">
-                <h1 class="display-5 fw-bold text-body-emphasis mb-4">Step into <span
-                          class="text-warning text-uppercase">"Style"</span>
-                </h1>
-                <h4 class="fs-3 fw-medium text-body-emphasis mb-4">
-                    Explore the Latest Footwear Trends.
-                </h4>
-                <p class="mb-4 text-body-tertiary w-75">
-                    Discover a diverse range of shoes designed to complement your unique style, ensuring you make a
-                    statement with every stride.
-                    Navigate effortlessly through our app with a user-friendly interface, making your shopping
-                    experience smooth, intuitive, and enjoyable.
-                </p>
-
-            </div>
-
-            <div class="col-6 d-none d-md-block">
-                <div class="w-100 h-100 placeholder-glow ">
-                    <span class="placeholder col-12 h-100">
-                    </span>
-                </div>
-            </div>
         </div>
 
     </div>
