--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,4 @@
-<div class="divider my-3"></div>
-<div class="container position-relative bottom-0 mt-3">
+<div class="container-fluid px-5 mx-auto position-relative bottom-0 mt-4 bg-body-tertiary">
     <footer class="py-5 px-3 ">
         <div class="row">
             <div class="col-6 col-md-2 mb-3">
@@ -70,7 +69,7 @@
     </footer>
 </div>
 
-<div class="container-fluid bg-body-tertiary p-3">
+<div class="container-fluid bg-body-secondary p-3">
     <div class="d-flex flex-column px-5 flex-sm-row justify-content-between align-items-center">
         <div class=" px-3 my-2 d-flex align-items-center">
             <i class="fa-solid fa-fire fs-4 text-warning me-2"></i>
