--- a/src/app/components/home-blocks/home-blocks.component.html
+++ b/src/app/components/home-blocks/home-blocks.component.html
@@ -1,65 +1,65 @@
-<div class="container p-3">
-    <div class="row">
+<div class="container-fluid p-3 ">
+    <div class="row px-3 mx-auto">
 
-        <div class="col-12 col-md-7 p-3 border">
-            <h3 class=" text-body-secondary">Bestsellers | Up to 60% off</h3>
-            <div class="row">
-                <div class="p-3 my-2 col-sm-6 shoe-card">
-                    <div class=" placeholder-glow   mx-auto mb-3">
-                        <span class="placeholder " style="width: 100%; height: 12rem;"></span>
+        <div class="col-12 col-md-7 p-3 bg-body-tertiary">
+            <div class="bg-body-tertiary">
+                <h3 class=" text-body-secondary"><span class="text-warning">Bestsellers |</span> Up to 60% off</h3>
+                <div class="row">
+
+                    @for (shoeCategory of shoeCategories; track $index) {
+                    <div class="p-3 mt-2 col-6 shoe-card">
+                        <div class="mx-auto mb-3 object-fit-cover">
+                            <img src={{shoeCategory.image}} alt={{shoeCategory.image}}
+                                 class="img-fluid object-fit-cover" style="width: 100%; height: 12rem;">
+                        </div>
+                        <div class="card-body">
+                            <a href="/products" class="text-decoration-none">
+                                <h5 class="lead text-warning fw-normal mb-2 text-uppercase ">
+                                    {{shoeCategory.category}}</h5>
+                            </a>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="small text-body-tertiary fw-normal mb-2 text-uppercase ">category</h5>
-                    </div>
+                    }
+
                 </div>
-                <div class=" p-3 my-2 col-sm-6 shoe-card">
-                    <div class=" placeholder-glow   mx-auto mb-3">
-                        <span class="placeholder " style="width: 100%; height: 12rem;"></span>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="small text-body-tertiary fw-normal mb-2 text-uppercase ">category</h5>
-                    </div>
-                </div>
+
             </div>
-            <div class="row">
-                <div class=" p-3 col-sm-6 shoe-card">
-                    <div class=" placeholder-glow   mx-auto mb-3">
-                        <span class="placeholder " style="width: 100%; height: 12rem;"></span>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="small text-body-tertiary fw-normal mb-2 text-uppercase ">category</h5>
-                    </div>
-                </div>
-                <div class=" p-3 col-sm-6 shoe-card">
-                    <div class=" placeholder-glow   mx-auto mb-3">
-                        <span class="placeholder " style="width: 100%; height: 12rem;"></span>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="small text-body-tertiary fw-normal mb-2 text-uppercase ">category</h5>
-                    </div>
-                </div>
-            </div>
+
         </div>
 
-        <div class="col-12 col-md-5 p-3 border ">
-            <h3 class=" text-body-secondary">Top Brands | 20% off</h3>
-            <div class="row p-2">
-                @for (brand of shoeBrands; track $index) {
+        <div class="col-12 col-md-5 px-md-3 p-0 mt-3 mt-md-0">
+            <div class="bg-body-tertiary p-3">
+                <h3 class=" text-body-secondary"><span class="text-warning">Top Brands |</span> Top Offers</h3>
+                <div class="row">
+                    @for (brand of shoeBrands; track $index) {
 
-                <div class="col-6 p-3">
-                    <div class="shoe-card px-3 d-flex justify-content-center flex-column mx-auto border">
-                        <img src={{brand.image}} alt="" style="width: 120px; height: 120px;"
-                             class="p-3 img-fluid opacity-75 border my-2 rounded-2">
-                        <!-- <div class="card-body">
+                    <div class="col-6 col-md-4 pt-3">
+                        <img src={{brand.image}} alt={{brand.image}} style="width: 100%; height: 100px;"
+                             class="p-3 brand-card img-fluid border border-warning opacity-75 my-2  bg-body-tertiary">
+                        <div class="card-body mt-2">
                             <h5 class="small mb-2 text-uppercase text-center text-body-secondary"
                                 style="letter-spacing: 2px;">
                                 {{brand.name}}
                             </h5>
-                        </div> -->
+                        </div>
                     </div>
+                    }
                 </div>
 
-                }
+            </div>
+
+            <div class="bg-body-tertiary p-3 mt-3 d-flex ">
+                <div class="col-7 ps-2">
+                    <h3 class=" text-warning">Cashback</h3>
+                    <p class=" text-body-secondary lead">Get up to 20% cashback on top brands</p>
+                    <p class=" text-body-secondary ">Check out now!</p>
+                    <a href="#" class="link text-decoration-none text-warning fs-5">Explore</a>
+                </div>
+                <div class="col-5 p-2 mx-auto my-auto">
+                    <img src="../../../assets/img/shoes/shoe05.png" alt="" style="width: 180px; height: 180px;"
+                         class="img-fluid object-fit-cover">
+                </div>
+
             </div>
         </div>
 
