--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -31,8 +31,9 @@
 
         @for (shoe of shoeItems; track $index) {
         <div class=" p-3 col-lg-3 my-2 col-sm-6 shoe-card" (click)="selectShoes($index)">
-            <div class=" placeholder-glow   mx-auto mb-3">
-                <span class="placeholder " style="width: 100%; height: 12rem;"></span>
+            <div class="mx-auto mb-3">
+                <img src={{shoe.image}} alt="image" style="width: 100%; height: 12rem;"
+                     class="img-fluid object-fit-cover">
             </div>
             <div class="card-body">
                 <h5 class="small text-body-tertiary fw-normal mb-2 text-uppercase ">{{shoe.category}}</h5>
